[EEX-1040] fix network info-panel overflowing

--- a/src/public/scss/components/_inner-header.scss
+++ b/src/public/scss/components/_inner-header.scss
@@ -17,25 +17,28 @@
 		padding-left: 15px;
 	}
 	.backwards-link {
-		position: absolute;
+		position: relative;
 		left: -5px;
-		@include max-vw($res-1600) {
-			top: -36px;
-			left: 18px;
-			width: 20px;
-			height: 20px;
-			svg {
-				width: 12px;
+		&.move-top {
+			position: absolute;
+			@include max-vw($res-1600) {
+				top: -36px;
+				left: 18px;
+				width: 20px;
+				height: 20px;
+				svg {
+					width: 12px;
+				}
 			}
-		}
-		@include max-vw($res-1280) {
-			left: 25px;
-		}
-		@include max-vw($res-768) {
-			left: 18px;
-		}
-		@include max-vw($res-500) {
-			left: 13px;
+			@include max-vw($res-1280) {
+				left: 25px;
+			}
+			@include max-vw($res-768) {
+				left: 18px;
+			}
+			@include max-vw($res-500) {
+				left: 13px;
+			}
 		}
 	}
 	&.distribution {
