--- a/src/public/scss/components/_table-label.scss
+++ b/src/public/scss/components/_table-label.scss
@@ -15,7 +15,6 @@
 		margin-right: 10px;
 	}
 	@include max-vw($res-500) {
-		align-items: flex-end;
 		.filter-btn {
 			margin-right: 0;
 		}
